--- a/pom.xml
+++ b/pom.xml
@@ -116,14 +116,29 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>${maven.jar.plugin.version}</version>
-                <configuration>
+		<configuration>
+
                     <archive>
                         <manifestEntries>
                             <hyperdriveVersion>${hyperdrive.version}</hyperdriveVersion>
                         </manifestEntries>
                     </archive>
-                </configuration>
+	    </configuration>
+
+
+
             </plugin>
+
+
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-war-plugin</artifactId>
+			<version>2.6</version>
+			<configuration>
+				<failOnMissingWebXml>false</failOnMissingWebXml>
+			</configuration>
+		</plugin>
+
 
             <!-- Tests -->
             <plugin>
